--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
               <figcaption>Cats <strong>hate</strong> other cats.</figcaption>  
             </figure>
           </section>
-       </main>
+          <h2>Cat Form</h2>
+           <!-- The action attribute indicates where form data should be sent. For example, <form action="/submit-url"></form> tells the browser that the form data should be sent to the path /submit-url.-->
+       
+    </main>
       </body>
 </html>
