--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
           </section>
           <h2>Cat Form</h2>
            <!-- The action attribute indicates where form data should be sent. For example, <form action="/submit-url"></form> tells the browser that the form data should be sent to the path /submit-url.-->
-       
+              <form action="https://freecatphotoapp.com/submit-cat-photo">
+                <!-- name attribute specify action what is going to enter placeholder give us information about type of data enter required help to force user to enter some data cannot submit data-->
+                  <input type="text" name="catphotourl" placeholder="cat photo URL" required>
     </main>
       </body>
 </html>
