--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
               <form action="https://freecatphotoapp.com/submit-cat-photo">
                 <!-- name attribute specify action what is going to enter placeholder give us information about type of data enter required help to force user to enter some data cannot submit data-->
                   <input type="text" name="catphotourl" placeholder="cat photo URL" required>
+                <!--You can use radio buttons for questions where you want only one answer out of multiple options.Here is an example of a radio button with the option of cat: <input type="radio"> cat. Remember that input elements are self-closing.-->
+                <!--label is used to make text clicable-->
+                    <label><input type="radio" id="indoor">Indoor</label>
+                    <label><input type="radio" id="outdoor">Outdoor</label>
     </main>
       </body>
 </html>
