--- a/index.html
+++ b/index.html
@@ -1,54 +1,70 @@
-<html>
+<!DOCTYPE html>
+
+<html lang="en">
+  <head>
+    <title>CatPhotoApp</title>
+  </head>
   <body>
     <main>
       <h1>CatPhotoApp</h1>
-         <section>
-           <h2>Cat Photos</h2>
-           <!-- TODO: Add link to cat photos -->
-           <p>See more <a target="_blank" href="https://freecatphotoapp.com">cat photos</a> in our gallery.</p>
-           <a href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
-         </section>
-         <section>
-            <h2>Cat Lists</h2>
-            <h3>Things cats love:</h3>
-            <ul>
-              <li>cat nip</li>
-              <li>laser pointers</li>
-              <li>lasagna</li>
-            </ul>
-           <figure>
-              <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
-              <figcaption>Cats <em>love</em> lasagna.</figcaption>  
-           </figure>
-           <h3>Top 3 things cats hate:</h3>
-           <ol>
-              <li>flea treatment</li>
-              <li>thunder</li>
-              <li>other cats</li>
-           </ol>
-           <figure>
-              <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field.">
-              <figcaption>Cats <strong>hate</strong> other cats.</figcaption>  
-            </figure>
-          </section>
-          <h2>Cat Form</h2>
-           <!-- The action attribute indicates where form data should be sent. For example, <form action="/submit-url"></form> tells the browser that the form data should be sent to the path /submit-url.-->
-              <form action="https://freecatphotoapp.com/submit-cat-photo">
-                <!-- name attribute specify action what is going to enter placeholder give us information about type of data enter required help to force user to enter some data cannot submit data-->
-                  <input type="text" name="catphotourl" placeholder="cat photo URL" required>
-                <!--You can use radio buttons for questions where you want only one answer out of multiple options.Here is an example of a radio button with the option of cat: <input type="radio"> cat. Remember that input elements are self-closing.-->
+      <section>
+        <h2>Cat Photos</h2>
+        <!-- TODO: Add link to cat photos -->
+        <p>See more <a target="_blank" href="https://freecatphotoapp.com">cat photos</a> in our gallery.</p>
+        <a href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
+      </section>
+      <section>
+        <h2>Cat Lists</h2>
+        <h3>Things cats love:</h3>
+        <ul>
+          <li>cat nip</li>
+          <li>laser pointers</li>
+          <li>lasagna</li>
+        </ul>
+        <figure>
+          <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
+          <figcaption>Cats <em>love</em> lasagna.</figcaption>  
+        </figure>
+        <h3>Top 3 things cats hate:</h3>
+        <ol>
+          <li>flea treatment</li>
+          <li>thunder</li>
+          <li>other cats</li>
+        </ol>
+        <figure>
+          <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field.">
+          <figcaption>Cats <strong>hate</strong> other cats.</figcaption>  
+        </figure>
+      </section>
+      <section>
+        <!-- The action attribute indicates where form data should be sent. For example, <form action="/submit-url"></form> tells the browser that the form data should be sent to the path /submit-url.-->
+        <h2>Cat Form</h2>
+        <form action="https://freecatphotoapp.com/submit-cat-photo">
+          <!-- name attribute specify action what is going to enter placeholder give us information about type of data enter required help to force user to enter some data cannot submit data-->
+          
+          <fieldset>
+            <legend>Is your cat an indoor or outdoor cat?</legend>
+            <label><input id="indoor" type="radio" name="indoor-outdoor" value="indoor" checked> Indoor</label>
+            <label><input id="outdoor" type="radio" name="indoor-outdoor" value="outdoor"> Outdoor</label>
+          </fieldset>
+          <fieldset>
+                       <!--You can use radio buttons for questions where you want only one answer out of multiple options.Here is an example of a radio button with the option of cat: <input type="radio"> cat. Remember that input elements are self-closing.-->
+
                 <!--label is used to make text clicable-->
-                    <fieldset>
-                       <legend>Is your cat an indoor or outdoor cat?</legend>
-                       <label><input id="indoor" type="radio" name="indoor-outdoor" value="indoor"> Indoor</label>
-                       <label><input id="outdoor" type="radio" name="indoor-outdoor" value="outdoor"> Outdoor</label>
-                    </fieldset>
-                   <fieldset>
-                       <legend>What's your cat's personality?</legend>
-                        <input id="loving" type="checkbox" name="personality" value="loving"> <label for="loving" >Loving</label>
-                        <input id="lazy" type="checkbox" name="personality" value="lazy"> <label for="lazy">Lazy</label>
-                        <input id="energetic" type="checkbox" name="personality" value="energetic"> <label for="energetic"> Energetic</label>
-                   </fieldset>
+            <legend>What's your cat's personality?</legend>
+            <input id="loving" type="checkbox" name="personality" value="loving" checked> <label for="loving">Loving</label>
+            <input id="lazy" type="checkbox" name="personality" value="lazy"> <label for="lazy">Lazy</label>
+            <input id="energetic" type="checkbox" name="personality" value="energetic"> <label for="energetic">Energetic</label>
+          </fieldset>
+          <input type="text" name="catphotourl" placeholder="cat photo URL" required>
+          <button type="submit">Submit</button>
+        </form>
+      </section>
     </main>
-      </body>
+    <footer>
+      <p>
+        No Copyright - <a href="https://www.freecodecamp.org">freeCodeCamp.org</a>
+      </p>
+    </footer>
+  </body>
 </html>
